force-app/main/default/objects/Star_Wars_Person__c/Star_Wars_Person__c.object-meta.xml
<CustomObject>
    <label>Star Wars: Person</label>
    <nameField>
        <label>Person&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Star Wars: People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>