force-app/main/default/objects/Star_Wars_Person__c/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <label>Birth Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>