force-app/main/default/objects/Star_Wars_Person__c/fields/Eye_Color__c.field-meta.xml
<CustomField>
    <fullName>Eye_Color__c</fullName>
    <label>Eye Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>