force-app/main/default/objects/Star_Wars_Person__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>30</length>
    <type>Text</type>
</CustomField>