force-app/main/default/objects/Star_Wars_Person__c/fields/Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Hair_Color__c</fullName>
    <label>Hair Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>