force-app/main/default/objects/Star_Wars_Person__c/fields/Homeworld__c.field-meta.xml
<CustomField>
    <fullName>Homeworld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeworld</label>
    <referenceTo>Star_Wars_Planet__c</referenceTo>
    <relationshipLabel>Residents</relationshipLabel>
    <relationshipName>Star_Wars_People</relationshipName>
    <type>Lookup</type>
</CustomField>