force-app/main/default/objects/Star_Wars_Person__c/fields/Mass_kg__c.field-meta.xml
<CustomField>
    <fullName>Mass_kg__c</fullName>
    <label>Mass (kg)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>